--- a/package.json
+++ b/package.json
@@ -3,31 +3,31 @@
   "version": "0.0.1",
   "description": "The Catch-of-the-Day sample app from React for Beginners by Wes Bos.",
   "main": "index.js",
-  "private": true,
+  "private": false,
   "devDependencies": {
-    "concurrently": "6.4.0",
-    "react-scripts": "4.0.3"
+    "concurrently": "^7.4.0",
+    "react-scripts": "^5.0.1"
   },
   "dependencies": {
-    "autoprefixer-stylus": "1.0.0",
-    "firebase": "8.10.0",
-    "prop-types": "15.7.2",
+    "autoprefixer-stylus": "^1.0.0",
+    "firebase": "^9.10.0",
+    "prop-types": "^15.8.1",
     "re-base": "4.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-router-dom": "5.3.0",
-    "react-transition-group": "4.4.2",
-    "serve": "13.0.2",
-    "stylus": "0.55.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.0",
+    "react-transition-group": "^4.4.5",
+    "serve": "^14.0.1",
+    "stylus": "^0.59.0"
   },
   "scripts": {
     "dev": "react-scripts start",
     "start": "react-scripts start",
     "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
-    "build": "react-scripts docs",
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
-    "now-build": "npm run build && mv docs dist",
+    "now-build": "npm run build && rm -rf docs && mv build docs",
     "styles:watch": "npm run styles -- -w"
   },
   "browserslist": [
@@ -51,6 +51,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/macmladen/react-for-beginners/issues"
-  },
-  "homepage": "https://github.com/macmladen/react-for-beginners#readme"
+  }
 }
