--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "main": "index.js",
   "private": false,
   "devDependencies": {
-    "concurrently": "^7.4.0",
-    "react-scripts": "^5.0.1"
+    "concurrently": "6.4.0",
+    "react-scripts": "4.0.3"
   },
   "dependencies": {
-    "autoprefixer-stylus": "^1.0.0",
-    "firebase": "^9.10.0",
-    "prop-types": "^15.8.1",
+    "autoprefixer-stylus": "1.0.0",
+    "firebase": "8.10.0",
+    "prettier": "^2.7.1",
+    "prop-types": "15.7.2",
     "re-base": "4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.0",
-    "react-transition-group": "^4.4.5",
-    "serve": "^14.0.1",
-    "stylus": "^0.59.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.3.0",
+    "react-transition-group": "4.4.2",
+    "serve": "13.0.2",
+    "stylus": "0.55.0"
   },
   "scripts": {
     "dev": "react-scripts start",
