--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "dev": "react-scripts start",
     "start": "react-scripts start",
     "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
-    "build": "react-scripts build",
+    "build": "npm run build-only && rm -rf docs && mv build docs",
+    "build-only": "react-scripts build",
     "eject": "react-scripts eject",
     "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
-    "now-build": "npm run build && rm -rf docs && mv build docs",
     "styles:watch": "npm run styles -- -w"
   },
   "browserslist": [
@@ -53,5 +53,6 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/macmladen/react-for-beginners/issues"
-  }
+  },
+  "homepage": "https://macmladen.com/rfb"
 }
