Another try to build for GitHub pages under subdirectory using basename in Router v.0.2.2.

--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
   "bugs": {
     "url": "https://github.com/macmladen/react-for-beginners/issues"
   },
-  "homepage": "https://macmladen.com/rfb"
+  "homepage": "/rfb"
 }
